# bite.py

./: .gitignore  .gitmodules  Makefile  README.md  build-ubuntu22.sh  build_packages.sh  encrypt_and_send.py  install-ubuntu22.sh  install_local_deps.sh  libt_encrypt_python.tar.xz  pyproject.toml  requirements-ubuntu22-base.txt  requirements-ubuntu22.txt  requirements.txt  setup.py  t_encrypt_stub.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: build-and-publish.yml  build-pypi-linux.yml  build-ubuntu22.yml  cla.yml  publish.yml  test-ubuntu22.yml  test.yml
bite/: __init__.py  bite.py
bite/core/: __init__.py  bite_rpc.py  encrypt.py  t_encrypt_adapter.py
bite/utils/: __init__.py  constants.py  helper.py  loader.py  logger.py
dist-ubuntu22/: bite_py-0.8.0.dev2-py3-none-any.whl  bite_py-0.8.0.dev3+ubuntu22-py3-none-any.whl
examples/: README.md  basic_transaction_encryption.py  message_encryption.py  mockup_encryption.py
final_dist/: bite_py-0.7.0-py3-none-any.whl  bite_py-0.8.0.dev1-py3-none-any.whl  bite_py-0.8.0.dev2-py3-none-any.whl  skale_te-0.0.1-py3-none-any.whl
local_dependencies/skale_te_pkg/: setup.py
local_dependencies/skale_te_pkg/skale_te/: __init__.py
scripts/: build_packages.sh
t_encrypt_package/: setup.py
t_encrypt_package/t_encrypt/: __init__.py
tests/: conftest.py  test_bite.py  test_encrypt_ctx.py
