[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skale-bite"
version = "0.8.1.dev0"
description = "Python Library to interact with BITE protocol on Skale network"
readme = "README.md"
authors = [
    {name = "SKALE Labs", email = "support@skalelabs.com"}
]
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
    "Operating System :: POSIX :: Linux",
]
keywords = ["SKALE", "blockchain", "BITE", "threshold", "cryptography", "encryption"]
requires-python = ">=3.11"
dependencies = [
    "rlp>=3.0.0",
    "requests>=2.31.0",
    "pycryptodome>=3.19.0",
    "t-encrypt==0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
linter = [
    "ruff==0.1.4",
    "mypy==1.8.0",
    "types-requests>=2.31.0.0",
    "isort>=4.2.15,<5.4.3",
    "importlib-metadata<9.0",
]
[project.urls]
Homepage = "https://github.com/skalenetwork/bite.py"
Repository = "https://github.com/skalenetwork/bite.py"
Documentation = "https://github.com/skalenetwork/bite.py/tree/develop/examples"

[tool.setuptools.packages.find]
where = ["."]
include = ["bite*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"bite" = ["lib/*.so*"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build/", "dist/", "deps/", "local_dependencies/", "libBLS/"]

[tool.ruff]
line-length = 100
exclude = ["helper-scripts", ".git", "build", "dist", "deps", "local_dependencies", "libBLS"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
